--- a/src/main/resources/templates/deal.html
+++ b/src/main/resources/templates/deal.html
@@ -3,41 +3,44 @@
 	<head>
 		<meta charset="utf-8">
 		<title>合约部署</title>
+		<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css"/>
 		<link rel="stylesheet" type="text/css" href="css/deal.css"/>
 		<link rel="stylesheet" type="text/css" href="css/sign.css"/>
-		<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css"/>
 		<script src="js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 		<link rel="stylesheet" type="text/css" href="css/header.css"/>
 		<link rel="stylesheet" type="text/css" href="css/navion.css"/>
 	</head>
-	<body>
+	<body style="background: #EDF0F4">
 		<div class="headpage"></div>
 		<div style="width: 87%;margin-left: 1%;float: left;margin-top: 0.5%;">
 			<div class="deal_cont" style="height: auto;">
 				<div class="deal_part">
-					<input type="text" placeholder="请从本地文件中挑选合约上传部署"></input>
-					<button>部署</button>
+					<div class="div_input">
+						<input type="text" placeholder="请从本地文件中挑选合约上传部署"class="input"/>
+						<i class="input-img"></i>
+					</div>
+					<button class="button">部署</button>
 				</div>
-				<div class="sign">
+				<div class="deal">
 					<table>
-						  <tr>
-							  <th>合约说明</th>
-							  <th>时间</th>
-							  <th>部署节点</th>
-							  <th>操作</th>
-						  </tr>
-						  <tr>
-							  <td>这里是简单说明合约内容以及作用文本</td>
-							  <td>2020-01-25 14:25:45</td>
-							  <td>1x3oKzf6gEDBS5pTvu8e1edc71MiWBq98</td>
-							  <td><button class="do">查看</button>&emsp;<button class="do">删除</button></td>
-						  </tr>
-						  <tr>
-							  <td>这里是简单说明合约内容以及作用文本</td>
-							  <td>2020-02-25 14:25:45</td>
-							  <td>1Hm7eP57r4B6e2q29RXc2UsGexR2VT4QWG</td>
-							  <td><button class="do">查看</button>&emsp;<button class="do">删除</button></td>
-						  </tr>
+						<tr>
+							<th>合约说明</th>
+							<th>时间</th>
+							<th>部署节点</th>
+							<th>操作</th>
+						</tr>
+						<tr>
+							<td>这里是简单说明合约内容以及作用文本</td>
+							<td>2020-01-25 14:25:45</td>
+							<td>1x3oKzf6gEDBS5pTvu8e1edc71MiWBq98</td>
+							<td><button class="do">查看</button>&emsp;<button class="do">删除</button></td>
+						</tr>
+						<tr>
+							<td>这里是简单说明合约内容以及作用文本</td>
+							<td>2020-02-25 14:25:45</td>
+							<td>1Hm7eP57r4B6e2q29RXc2UsGexR2VT4QWG</td>
+							<td><button class="do">查看</button>&emsp;<button class="do">删除</button></td>
+						</tr>
 					</table>
 				</div>
 			</div>
