--- a/src/main/resources/templates/pass.html
+++ b/src/main/resources/templates/pass.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content=""/>
     <link th:href="@{/css/pass.css}" rel="stylesheet" type="text/css"/>
 </head>
-<body>
+<body style="background: #EDF0F4">
 <section class="outer-section">
     <div class="">
         <div class="basic_top_info">
