--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -17,19 +17,28 @@ button{cursor:pointer;}
 	border-collapse:collapse;
 	border:0px;
 }
+.header .tr{
+	height: 63px;
+	border-left:0px solid #ddd;
+	border-top: 0px solid #ddd;
+}
 .header td{
-	height: 60px;
+	height: 50px;
 	border:solid #000 0px;
 }
 .header tr{
 	border:solid 1px #D4D3D3;
 }
+.header .tr2{
+	background: #F3F3F3;
+}
 
 .tdroot{
 	width: 16%;
 	font-family:Microsoft YaHei;
-	font-weight:400;
 	color:rgba(85,85,85,1);
+	font-size: 18px;
+	font-weight:400;
 }
 .tdroot i{
 	margin-left: 8%;
@@ -48,7 +57,7 @@ button{cursor:pointer;}
 }
 .h-button{
 	height:30px;
-	background:rgba(81,155,253,1);
+	background:#61A0F2;
 	border-radius:5px;
 	border: 0.0625rem;
 	color: #FFFFFF;
