--- a/src/main/resources/static/css/node.css
+++ b/src/main/resources/static/css/node.css
@@ -1,14 +1,18 @@
 * {margin: 0; padding: 0;}
-body, textarea, input, button, select, keygen, legend{font:14px "Microsoft YaHei", Verdana, "宋体", sans-serif; font-weight: normal; color: #666666; outline: 0;}
-table {border-collapse: collapse; border-spacing: 0;}
-.outer-section {width:100%; float: left; clear: both;}
-.outer-wrapper {width:100%; max-width: 1920px; margin: 0 auto;}
-.banner {width:100%; max-width: 1920px; height: auto;}
+/*body, textarea, input, button, select, keygen, legend{font:14px "Microsoft YaHei", Verdana, "宋体", sans-serif; font-weight: normal; color: #666666; outline: 0;}*/
+/*table {border-collapse: collapse; border-spacing: 0;}*/
+/*.outer-section {width:100%; float: left; clear: both;}*/
+/*.outer-wrapper {width:100%; max-width: 1920px; margin: 0 auto;}*/
+/*.banner {width:100%; max-width: 1920px; height: auto;}*/
+a, a:link {color: #666666;}
+a:visited {color: #666666;}
+a:hover {color: #519BFD;text-decoration: none; cursor: pointer;}
+a:active {color: #519BFD;}
 .control_cont{
 	width: 100%;
 	height: 458px;
-	background:#FFFFFF;
-	border:1px solid rgba(212,211,211,1);
+	background:#F3F3F3;
+	border:1px solid rgba(230,230,230,1);
 	border-radius:5px;
 	float: left;
 	padding-bottom: 2em;
@@ -16,7 +20,7 @@ table {border-collapse: collapse; border-spacing: 0;}
 .box_add_node{
 	min-width: 8%;
 	height:48px;
-	background:#519BFD;
+	background:#61A0F2;
 	border-radius:5px;
 	color: #FFFFFF;
 	margin: 2em;
@@ -41,14 +45,15 @@ table {border-collapse: collapse; border-spacing: 0;}
 	height: 45px;
 	font-weight:800;
 	font-size: 16px;
-	background: #E2E8F2;
+	background: #E6E6E6;
 }
 .control td{
 	text-align: center;
 	height: 45px;
+	background: #FFFFFF;
 }
 .control td .root{
-	background: #48BC3F;
+	background: #90E58A;
 	border-radius:5px;
 	border:0px #ff0000 solid;
 	color: #FFFFFF;
@@ -56,7 +61,7 @@ table {border-collapse: collapse; border-spacing: 0;}
 }
 .control table,th,td
 {
-	border: 1px solid #519BFD;
+	border:1px solid rgba(128,128,128,1);
 }
 
 .control td .do{
