--- a/src/main/resources/static/css/sign.css
+++ b/src/main/resources/static/css/sign.css
@@ -3,14 +3,18 @@ body, textarea, input, button, select, keygen, legend{font:14px "Microsoft YaHei
 table {border-collapse: collapse; border-spacing: 0;}
 button{cursor:pointer;}
 /* .outer-section {width:100%; float: left; clear: both;} */
-.outer-section {width:80%;min-width: 80%; float: left;}
-.outer-wrapper {width:100%; max-width: 1920px; margin: 0 auto;}
-.banner {width:100%; max-width: 1920px; height: auto;}
+/*.outer-section {width:80%;min-width: 80%; float: left;}*/
+/*.outer-wrapper {width:100%; max-width: 1920px; margin: 0 auto;}*/
+/*.banner {width:100%; max-width: 1920px; height: auto;}*/
 
+a, a:hover{text-decoration: none; cursor: pointer;}
+a:link {color: #666666;}
+a:visited {color: #666666;}
+a:hover {color: #5B9AFF;}
 .sign_cont{
 	width: 100%;
 	height: 458px;
-	background:#FFFFFF;
+	background:#F3F3F3;
 	border:1px solid rgba(212,211,211,1);
 	border-radius:5px;
 	float: left;
@@ -59,13 +63,20 @@ button{cursor:pointer;}
 .sign th{
 	text-align: center;
 	height: 45px;
-	font-weight:900;
-	font-size: 16px;
-	background: #E2E8F2;
+	background: #E6E6E6;
+	font-size:18px;
+	font-family:Microsoft YaHei;
+	font-weight:bold;
+	color:rgba(85,85,85,1);
 }
 .sign td{
 	text-align: center;
 	height: 45px;
+	background: #FFFFFF;
+	font-size:16px;
+	font-family:Microsoft YaHei;
+	font-weight:400;
+	color:rgba(85,85,85,1);
 }
 .sign td .root{
 	background: #48BC3F;
@@ -76,11 +87,11 @@ button{cursor:pointer;}
 }
 .sign table,th,td
 {
-	border:1px solid #519BFD;
+	border:1px solid rgba(128,128,128,1);
 }
 
 .sign td .do{
-	background: #519BFD;
+	background: #61A0F2;
 	border-radius:5px;
 	border:0px #ff0000 solid;
 	color: #FFFFFF;
