--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,12 +9,11 @@
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="js/highcharts.js"></script>
     <link th:href="@{/css/home.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{/css/header.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{/css/navion.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/public.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{/font-awesome-4.7.0/css/font-awesome.css}" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
 </head>
-<body>
+<body style="background: #EDF0F4">
 <div class="headpage"></div>
 <div style="width: 87%;margin-left: 1%;float: left;margin-top: 1%;">
     <div class="th_box">
@@ -68,19 +67,9 @@
                 </div>
                 <div class="th_monitor">
                 </div>
-                <div class="th_box2" style="height: auto;">
-                    <div class="th_monitor_blue2"></div>
-                    <div class="th_monitor_info2">
-                        <span style="margin-left: 10px;">预警状态</span>
-                    </div>
-                    <div class="warningitem" >
-                        <div style="margin-left: 23%;" th:fragment="article_type">CPU状态<br/><span id = "cpuStatus"></span></div>
-                        <div>卡块情况<br/><span th:text="'&nbsp;'"  id = "blockStatus"></span></div>
-                        <div>停运情况<br/><span th:text="'&nbsp;'"  id = "outageStatus"></span></div>
-                        <div>分叉情况<br/><span th:text="'&nbsp;'"  id = "bifurcation"></span></div>
-                    </div>
-                </div>
+
             </div>
+
             <div class="tab-pane" id="panel-440280">
                 <div class="tabexport">
                     <table>
@@ -97,6 +86,19 @@
                     </table>
                 </div>
             </div>
+        </div>
+
+    </div>
+    <div class="th_box2">
+        <div class="th_monitor_blue2"></div>
+        <div class="th_monitor_info2">
+            <span class="span_status">预警状态</span>
+        </div>
+        <div class="warningitem">
+            <div style="margin-left: 23%;" th:fragment="article_type">CPU状态<br/><span id = "cpuStatus"></span></div>
+            <div>卡块情况<br/><span th:text="'&nbsp;'"  id = "blockStatus"></span></div>
+            <div>停运情况<br/><span th:text="'&nbsp;'"  id = "outageStatus"></span></div>
+            <div>分叉情况<br/><span th:text="'&nbsp;'"  id = "bifurcation"></span></div>
         </div>
     </div>
 </div>
