--- a/src/main/resources/templates/mail.html
+++ b/src/main/resources/templates/mail.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <title>邮件预警</title>
     <link th:href="@{/css/mail.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{/css/header.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{/css/navion.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/public.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{/font-awesome-4.7.0/css/font-awesome.css}" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script></head>
-<body style="background: #EDF0F4;">
+<body style="background: #EDF0F4">
 <div class="headpage"></div>
 <div style="width: 87%;margin-left: 1%;float: left;margin-top: 1%;">
     <div class="mail_cont">
