--- a/src/main/resources/templates/node.html
+++ b/src/main/resources/templates/node.html
@@ -6,20 +6,19 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link th:href="@{/css/node.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{/css/header.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{/css/navion.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{/font-awesome-4.7.0/css/font-awesome.css}" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link th:href="@{/css/node.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/public.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/font-awesome-4.7.0/css/font-awesome.css}" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
 </head>
 <body style="background: #EDF0F4;">
-<div class="headpage"></div>
+<div class="headpage" style="border:0px solid #555555;"></div>
 <div class="control_cont" style="width: 87%;margin-left: 1%;float: left;margin-top: 1%;height: auto;">
     <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"
-            style="background:#519BFD;margin-left: 2%;margin-top: 20px;">
+            style="background:#61A0F2;margin-left: 2%;margin-top: 20px;border: 0px">
         +&nbsp;添加新的节点
     </button>
 
