--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -4,23 +4,22 @@
     <meta charset="utf-8">
     <title>鉴权设置</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css"/>
     <link th:href="@{/css/sign.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{/css/header.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{/css/navion.css}" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link th:href="@{/css/public.css}" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!--    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>-->
 <!--    <script src="sweetalert2/dist/sweetalert2.min.js"></script>-->
 <!--    <link rel="stylesheet" href="sweetalert2/dist/sweetalert2.min.css">-->
 </head>
-<body style="background: #EDF0F4;">
+<body style="background: #EDF0F4">
 <div class="headpage"></div>
 <div style="width: 87%;margin-left: 1%;float: left;margin-top: 1%;">
     <div class="sign_cont" style="height: auto;">
         <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"
-                style="background:#519BFD;margin-left: 2%;margin-top: 20px;" id="add">
+                style="background:#61A0F2;margin-left: 2%;margin-top: 20px;border: 0px" id="add">
             +&nbsp;添加新的用户
         </button>
 
