--- a/src/main/resources/static/css/sign.css
+++ b/src/main/resources/static/css/sign.css
@@ -94,9 +94,12 @@ a:hover {color: #5B9AFF;}
 	background: #61A0F2;
 	border-radius:5px;
 	border:0px #ff0000 solid;
-	color: #FFFFFF;
-	height: 28px;
-	min-width: 20%;
+	min-width: 22%;
+	height: 36px;
+	font-size: 16px;
+	font-family: Microsoft YaHei;
+	font-weight: 400;
+	color: rgba(255,255,255,1);
 }
 
 .dropbtn {
