--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -31,7 +31,7 @@
 <!--        <div id="deal_link"><a href="deal"><i class="fa fa-envelope-open-o"></i>&emsp;合约部署</a></div>-->
     </div>
     <div class="inner3">
-        <div><i class="fa fa-angle-double-left fa-2x"></i></div>
+<!--        <div><i class="fa fa-angle-double-left fa-2x"></i></div>-->
     </div>
 </div>
 <div class="header-two"style="width: 89%;float:left;">
