--- a/src/main/resources/static/css/public.css
+++ b/src/main/resources/static/css/public.css
@@ -66,7 +66,7 @@ a:active {color: #007BF9}
 
 
 
-#nav ul li.current{
+.current{
 	background: #61A0F2;
 }
 #nav ul li a{
@@ -131,8 +131,8 @@ a:active {color: #007BF9}
 }
 .inner2{
     width: 100%;
-    /*height: inherit;*/
-	height:100vh;
+    height: inherit;
+	/*height:100vh;*/
     position: relative;
 	float: left;
 	background:rgba(77,77,77,1);
